# unicorn

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  optic.opam  ppx_deriving_optic.opam  unicorn_jsoo.opam
examples/: dune  game_2048.html  game_2048.ml  todomvc.html  todomvc.ml
jsoo/: algebra.ml  attr.ml  dag.ml  dune  event.ml  html.ml  type.ml  unicorn_jsoo.ml  unicorn_jsoo.mli
optic/: dune  optic.ml  optic.mli
playground/: dune  enable_ppx.ml  index.html  toplevel.ml
ppx_deriving_optic/: dune  ppx_deriving_optic.ml
